Additions to bashrc and updated email in gitconfig
Added aliases to bashrc, changed prompt in bash, and changed email in
gitconfig from thorley to gmail address

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Andy Smith
-	email = asmith@thorleyindustries.com
+	email = smith780@gmail.com
 [github]
 	user = AndySmith78
 [core]
