--- a/.gitconfig
+++ b/.gitconfig
@@ -21,6 +21,7 @@
 	hist = log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
 	type = cat-file -t
   dump = cat-file -p
+  show-files = diff-tree --no-commit-id --name-status -r
 [merge]
   tool = vimdiff
 [credential]
